Fix home sections on mobile

--- a/src/base/2018-orlando.css
+++ b/src/base/2018-orlando.css
@@ -1192,11 +1192,6 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
   padding: 0;
 }
 
-.twentyseventeen-panel {
-  overflow: hidden;
-  position: relative;
-}
-
 .panel-image {
   background-position: center center;
   background-repeat: no-repeat;
@@ -1280,79 +1275,6 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
 
 .home .entry-header {
   display: none;
-}
-
-/* Frontpage Components */
-.column-frontpage-main-info {
-  height: 10.625rem;
-  background: #fff;
-  color: #234792;
-  position: relative;
-  overflow: hidden;
-  -webkit-box-shadow: 0 10px 40px 0 rgba(0,0,0,0.15);
-  box-shadow: 0 10px 40px 0 rgba(0,0,0,0.15);
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  margin-bottom: 1.25rem;
-  font-family: Oswald, sans-serif;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.column-frontpage-main-info:hover {
-  -webkit-box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2);
-  box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2);
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-}
-
-.column-frontpage-main-info a {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  color: #234792;
-  overflow: hidden;
-  -webkit-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  font-size: 1.125rem;
-  font-weight: 500;
-}
-
-.column-frontpage-main-info a:hover,
-.column-frontpage-main-info a:focus {
-  color: #009cdc;
-}
-
-.column-frontpage-main-info a small {
-  position: absolute;
-  top: .3125rem;
-  right: .3125rem;
-  display: block;
-  padding: 0 .375rem;
-  background: #234792;
-  color: #fff;
-  font-size: .875rem;
-}
-
-.column-frontpage-main-info a img {
-  margin-bottom: 1.25rem;
-  transition: transform .4s ease-in-out;
 }
 
 /*sections*/
@@ -2991,26 +2913,6 @@ Sponsors
   }
 }
 
-@media screen and (min-width: 20em) and (max-width: 48em) {
-  .column-frontpage-main-info a {
-    -webkit-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-  }
-
-  .column-frontpage-main-info a:before {
-    top: 8%;
-    width: 1000px;
-    height: 1000px;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    -webkit-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-  }
-}
-
 @media screen and (max-width: 30em) {
   .page-slug-tickets #tix-attendees .tix-attendee-list {
     padding-left: 0;
@@ -3613,14 +3515,6 @@ Sponsors
 
   .home .site-content-contain .site-main article {
     overflow: visible;
-  }
-
-  .home .site-content-contain .site-main article:first-child .wrap {
-    margin-top: -140px;
-  }
-
-  .column-frontpage-main-info {
-    margin-bottom: 0;
   }
 
   /* Sticky posts */
