--- a/src/pages/home.less
+++ b/src/pages/home.less
@@ -1,8 +1,20 @@
 .home.page {
+  .site-content-contain {
+    .site-main {
+      article:first-child {
+        .wrap {
+          margin-top: -140px;
+        }
+      }
+    }
+  }
+
   .home-sections {
     margin-bottom: @padding-large-vertical*2;
 
     .wp-block-column {
+      flex-basis: 100%;
+
       &:not(:last-child),
       &:nth-child(odd) {
         margin-right: @home-sections-offset;
@@ -11,6 +23,64 @@
       &:not(:first-child),
       &:nth-child(2n) {
         margin-left: @home-sections-offset
+      }
+
+      .column-frontpage-main-info {
+        height: 10.625rem;
+        background: #fff;
+        color: #234792;
+        position: relative;
+        overflow: hidden;
+        .box-shadow(0 10px 40px 0 rgba(0,0,0,0.15));
+        .transition(all .3s ease-in-out);
+        margin-bottom: 1.25rem;
+        .backface-visibility(hidden);
+
+        &:hover {
+          .box-shadow(0 10px 40px 0 rgba(0,0,0,0.2));
+          .transform(scale(1.05));
+        }
+
+        a {
+          .flex();
+          .flex-direction(column);
+          .flex-justify(center);
+          .flex-align-items(center);
+          .transition(all .2s ease-in-out);
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          color: #234792;
+          overflow: hidden;
+          font-size: 1.125rem;
+          font-weight: 500;
+
+          &:hover,
+          &:focus {
+            color: #009cdc;
+          }
+
+          small {
+            position: absolute;
+            top: .3125rem;
+            right: .3125rem;
+            display: block;
+            padding: 0 .375rem;
+            background: #234792;
+            color: #fff;
+            font-size: .875rem;
+          }
+
+          img {
+            margin-bottom: 1.25rem;
+            .transition(transform .4s ease-in-out);
+          }
+        }
+      }
+
+      @media (max-width:@screen-md) {
+        margin-right: @home-sections-offset;
+        margin-left: @home-sections-offset;
       }
     }
   }
